# rust_dev

./: README.md  tmp.Dockerfile
.history/: Dockerfile_20230105200352  Dockerfile_20230105202655  Dockerfile_20230105202814  Dockerfile_20230105202951  Dockerfile_20230105204113  Dockerfile_20230105205543  Dockerfile_20230121154006  Dockerfile_20230121205245  Dockerfile_20230121211057  Dockerfile_20230121211947  Dockerfile_20230121220134  Dockerfile_20230122000243  Dockerfile_20230122002437  Dockerfile_20230122002758  Dockerfile_20230122002901  Dockerfile_20230122003346  Dockerfile_20230122003914  Dockerfile_20230122004121  docker-compose_20230105195341.yml  docker-compose_20230105195923.yml  docker-compose_20230105201452.yml  docker-compose_20230105203550.yml  docker-compose_20230105203647.yml  docker-compose_20230105203722.yml  docker-compose_20230105204044.yml  docker-compose_20230105205537.yml  docker-compose_20230121150659.yml  docker-compose_20230121150748.yml  docker-compose_20230121151519.yml  docker-compose_20230121151620.yml  docker-compose_20230121151807.yml  docker-compose_20230121152212.yml  docker-compose_20230121152406.yml  docker-compose_20230121152429.yml  docker-compose_20230121152918.yml  docker-compose_20230121152933.yml  docker-compose_20230121153826.yml  docker-compose_20230121154010.yml  docker-compose_20230121154213.yml  docker-compose_20230121210705.yml  (+4 more)
.history/files/hello-world/: Cargo_20230105220012.toml  Cargo_20230105225020.toml  Cargo_20230106102100.toml
.history/files/hello_wasm/: Cargo_20230121133432.toml  (+5 more)
files/hello_wasm/: Cargo.toml
(+18 files in other folders)
