[package]
name = "hello_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "0.1"